# plotweb

./: .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  README.md  assets.free  deploy.sh  docker-compose.yml
crates/plotweb-common/: Cargo.toml
crates/plotweb-common/src/: lib.rs
crates/plotweb-git/: Cargo.toml
crates/plotweb-git/src/: book.rs  chapter.rs  error.rs  lib.rs  migrate.rs  note.rs  repo.rs
crates/plotweb-import/: Cargo.toml
crates/plotweb-import/src/: docx.rs  lib.rs  markdown.rs
crates/plotweb-server/: Cargo.toml
crates/plotweb-server/src/: auth.rs  db.rs  email.rs  main.rs  ws.rs
crates/plotweb-server/src/routes/: auth.rs  beta.rs  books.rs  chapters.rs  fonts.rs  history.rs  images.rs  import.rs  mod.rs  notes.rs
migrations/: 001_initial.sql  002_book_font_settings.sql  003_git_migration.sql  004_beta_readers.sql  005_beta_pinned_commit.sql  006_beta_link_user.sql
plotweb-web/: Cargo.toml  Trunk.toml  index.html
plotweb-web/src/: api.rs  fonts.rs  main.rs  router.rs  store.rs  web_document.rs  ws.rs
plotweb-web/src/components/: app_shell.rs  mod.rs
plotweb-web/src/pages/: book.rs  dashboard.rs  editor.rs  editor_utils.rs  login.rs  mod.rs  reader.rs  register.rs  theme_preview.rs
