[workspace]
members = ["crates/*"]
exclude = ["plotweb-web"]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "migrate"] }
axum = { version = "0.8", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
argon2 = "0.5"
uuid = { version = "1", features = ["v4"] }
tower-http = { version = "0.6", features = ["fs", "cors"] }
tower-sessions = "0.14"
reqwest = { version = "0.12", features = ["json"] }
plotweb-common = { path = "crates/plotweb-common" }
