[package]
name = "plotweb-web"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
plotweb-common = { path = "../crates/plotweb-common" }

rinch = { path = "../../rinch/crates/rinch", default-features = false, features = ["components", "theme"] }
rinch-core = { path = "../../rinch/crates/rinch-core", features = ["theme"] }
rinch-tabler-icons = { path = "../../rinch/crates/rinch-tabler-icons" }

wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "Window", "Location", "Document", "Element", "HtmlElement", "HtmlInputElement",
    "HtmlTextAreaElement", "HtmlSelectElement", "HtmlHeadElement", "DomTokenList",
    "Node", "NodeList", "Text", "Comment",
    "CssStyleDeclaration", "DomRect", "DomRectList",
    "Event", "MouseEvent", "KeyboardEvent", "InputEvent",
    "EventTarget",
    "Range", "Selection", "CharacterData",
    "console",
    "Headers", "Request", "RequestInit", "RequestMode", "RequestCredentials",
    "Response",
] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde-wasm-bindgen = "0.6"

console_error_panic_hook = "0.1"
console_log = "0.2"
log = "0.4"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 2
