[package]
name = "plotweb-git"
version = "0.1.0"
edition.workspace = true

[dependencies]
plotweb-common.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
uuid.workspace = true
git2 = "0.20"
thiserror = "2"
chrono = "0.4"
anyhow.workspace = true
sqlx.workspace = true
